# ReliaChat

./: LICENSE  README.md  commands.txt  pyproject.toml
backend/: backend_server.py  backend_server_desktop.py  backend_server_for_mobile.py
frontend/: main.py  strict.py  translations.py
