[project]
name = "ReliaChat"
version = "1.3.4 BETA"
description = "ReliaChat, is an innovative AI chatapp, meant to be used on mobile on both iOS & Android. ReliaChat AI Innovations, is not responsible for any critical errors, or responses on your device. The power to chat without surveliance."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.2"
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "android.reliachat.rf.gd"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "ReliaChat"

# company name to display in about app dialogs
company = "ReliaChat"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025-2026 by ReliaChat AI Innovations Foundation"

[tool.flet.app]
path = "frontend"
