[project]
name = "ReliaChat"
version = "1.3.4 BETA"
description = "ReliaChat is an innovative AI chat app for iOS and Android, offering a modern, privacy-respecting chat experience. Built on the GPL v3.0 license, the software is provided 'as is' without warranty."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.2"
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "reliachat.rf.gd"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "ReliaChat"

# company name to display in about app dialogs
company = "ReliaChat AI Innovations"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by ReliaChat AI Innovations Project Contributors"

[tool.flet.app]
path = "frontend"
